# Pydantic-Research-Agent

./: .gitignore  README.md  agents.py  app.py  config.py  helper.py  prompts.py  pydantic_output.py  pyproject.toml  requirements.txt  research_agent.py  research_agent_lvl1.py  search_tools.py  state.py  tools.py
agents/: __init__.py  agent_answer_gen.py  agent_article_gen.py  agent_outline_gen.py  agent_persona_gen.py  agent_question_gen.py  agent_section_drafter.py  article_gen.py  base.py  topic_explorer.py
notebooks/: pydantic_agent_lvl1.ipynb  pydantic_agent_lvl2.ipynb  pydantic_agent_lvl3.ipynb  test.ipynb
src/agents/: agent_answer_gen.py  agent_article_gen.py  agent_outline_gen.py  agent_persona_gen.py  agent_question_gen.py  agent_section_drafter.py  agent_topic_explorer.py  base.py
src/core/: config.py  prompts.py  pydantic_models.py  state.py
src/tools/: search_tools.py  tavily.py
