[project]
name = "pydantic-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.31.0",
    "pydantic>=2.6.1",
    "pydantic-ai==0.0.18",
    "pydantic-ai-slim==0.0.18",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.7.1",
    "python-dotenv>=1.0.1",
    "openai>=1.12.0",
    "tavily-python>=0.3.1",
    "langchain>=0.1.9",
    "langchain-community>=0.0.20",
    "rich>=13.7.0",
    "wikipedia==1.4.0",
]
